--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
         </tr>
         <tr>
             <td>PUC</td>
-            <td>S.D.V.S. Sangah’s P.U. College </td>
+            <td>S.D.V.S. Sangahâ€™s P.U. College </td>
             <td>Department of Pre-University Bangalore</td>
             <td>68.25</td>
         </tr>
         <tr>
             <td>BCA</td>
-            <td>SJPN Trust’s BCA College, Nidasoshi</td>
+            <td>SJPN Trustâ€™s BCA College, Nidasoshi</td>
             <td>RCU</td>
             <td>87.91</td>
         </tr>
@@ -88,9 +88,10 @@
     <h1 class="heading"><span>Project</span></h1>
     <div class="Row">
         <div class="det">
-    <h3><span>Role: </span>Procurement anylyst</h3>
-    <h3><span>Title: </span>Nielsen</h3>
-    <h3><span>Description: </span>Total 2.5 yearsof experience in the area of software Field that is on Service Now Tool. 
+    <h3><span>Company name: </span>Tata Consultancy Services</h3>
+    <h3><span>Role: </span>Assistant System Engineer</h3>
+    <h3><span>Project name: </span>Nielsen</h3>
+    <h3><span>Description: </span>Total 2.5 years of experience in the area of software Field that is on Service Now Tool. 
 	Expertise in understanding and Analyzing tickets , Tracking requests.
 	Strong Experience in Creating the purchase order for small hardware and software related requests and  invoice processing
 	Well versed with Service Now, SAP SRM, Ariba, Tap.</h3>
